# qwen-tts

./: .gitignore  Cargo.toml  PLAN.md  README.md  SPEC.md  TASKS.md  build.rs  gui_stderr.txt  lessons.md  qwen-tts.toml.example
.cargo/: config.toml
.codebase-memory/: artifact.json  graph.db.zst
crates/app/: Cargo.toml
crates/app/src/: main.rs
crates/backends/cpu/: Cargo.toml  build.rs
crates/backends/cpu/src/: context.rs  ffi.rs  lib.rs
crates/backends/cpu/tests/: e2e.rs
crates/backends/cuda/: Cargo.toml
crates/backends/cuda/src/: lib.rs
crates/backends/metal/: Cargo.toml
crates/backends/metal/src/: lib.rs
crates/backends/pure-rust/: Cargo.toml
crates/backends/pure-rust/.cargo/: config.toml
crates/backends/pure-rust/examples/: probe_dims.rs  probe_meta.rs
crates/backends/pure-rust/src/: code_predictor.rs  config.rs  custom_ops.rs  debug_dumper.rs  lib.rs  pipeline.rs  prompt.rs  qgemv.rs  sampling.rs  talker.rs  timing.rs  tokenizer.rs
crates/backends/pure-rust/tests/: cross_val.rs  cuda.rs  diag.rs  e2e.rs  inspect_shapes.rs  perf_profile.rs  probe.rs  q8_bench.rs
crates/backends/rocm/: Cargo.toml
crates/backends/rocm/src/: lib.rs
crates/backends/sycl/: Cargo.toml
crates/backends/sycl/src/: lib.rs
crates/backends/wgpu/: Cargo.toml
crates/backends/wgpu/src/: lib.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/codec/: Cargo.toml
crates/codec/examples/: dump_tensors.rs
crates/codec/src/: conv.rs  dac.rs  gguf.rs  lib.rs  pipeline.rs  pre_conv.rs  pre_transformer.rs  q8_0.rs  quantizer.rs  resunit.rs  snake.rs  tconv.rs  upsample.rs
crates/codec/tests/: compare_with_cpp.rs  debug_pipeline.rs  gguf_load_test.rs
crates/core/: Cargo.toml
crates/core/src/: audio.rs  gguf.rs  graph.rs  lib.rs  model.rs  ops.rs  wav.rs
crates/qwentts-sys/: Cargo.toml  build.rs  wrapper.h
crates/qwentts-sys/src/: lib.rs  raw.rs  safe.rs
crates/runtime/: Cargo.toml
crates/runtime/src/: backend.rs  backend_setup.rs  config.rs  device.rs  external_qwentts.rs  ffi_backend.rs  lib.rs  logging.rs  models.rs  output.rs  scheduler.rs
crates/runtime/tests/: e2e.rs
docs/: ARCHITECTURE.md
docs/superpowers/plans/: 2026-06-14-ffi-backend-completeness.md  2026-06-14-gui-playback.md  2026-06-14-qwentts-ffi-implementation.md  2026-06-14-voice-reference.md  2026-06-15-pure-rust-ffi-parity-optimization.md  2026-06-15-stage-timing-implementation.md
docs/superpowers/specs/: 2026-06-14-gui-playback-design.md  2026-06-14-knowledge-graph-design.md  2026-06-14-qwentts-ffi-design.md  2026-06-15-stage-timing-infrastructure-design.md
examples/: prompt.txt
scripts/: setup_linux_cuda.sh
