[package]
name = "qwen-tts-app"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "qwen-tts-gui"
path = "src/main.rs"

[dependencies]
eframe = "0.27.2"
qwen-tts-core = { path = "../core" }
qwen-tts-runtime = { path = "../runtime" }

[lints]
workspace = true
