[package]
name = "qwen-tts-cli"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "qwen-tts"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
qwen-tts-core = { path = "../core" }
qwen-tts-runtime = { path = "../runtime" }
qwen-tts-backend-cpu = { path = "../backends/cpu" }
qwen-tts-backend-cuda = { path = "../backends/cuda" }
qwen-tts-backend-rocm = { path = "../backends/rocm" }
qwen-tts-backend-metal = { path = "../backends/metal" }
qwen-tts-backend-wgpu = { path = "../backends/wgpu" }
qwen-tts-backend-sycl = { path = "../backends/sycl" }
qwen-tts-backend-pure-rust = { path = "../backends/pure-rust", optional = true }

[features]
default = ["ffi"]
ffi = ["qwen-tts-runtime/ffi"]
pure-rust = ["qwen-tts-backend-pure-rust"]

[lints]
workspace = true
