[package]
name = "qwen-tts-runtime"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
qwen-tts-core = { path = "../core" }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
ureq = "3.2.1"

[lints]
workspace = true
