[package]
name = "qwen-tts-runtime"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
qwen-tts-core = { path = "../core" }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
ureq = "3.2.1"

# FFI in-process backend
qwen-tts-sys = { path = "../qwentts-sys", optional = true }

[features]
default = []
ffi = ["qwen-tts-sys"]

[lints]
workspace = true
