[package]
name = "qwen-tts-backend-pure-rust"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
anyhow = "1"
candle-core = "0.10"
candle-nn = "0.10"
rayon = "1.10"
tokenizers = "0.21"
rand = "0.8"
log = "0.4"
qwen-tts-core = { path = "../../core" }
qwen-tts-runtime = { path = "../../runtime" }
qwen-tts-codec = { path = "../../codec" }

[features]
default = []
cuda = ["candle-core/cuda", "candle-nn/cuda"]
metal = ["candle-core/metal", "candle-nn/metal"]

[lints]
workspace = true
